Break import.sql into several files and run from site instead of admin. (cherry picked from commit 6a970ca68c41988d59fab0cd9afd98925875f93b)
Conflicts:

	quick-start/ecommerce-archetype/src/main/resources/archetype-resources/site-war/src/main/resources/sql/load_admin_security.sql
	quick-start/ecommerce-archetype/src/main/resources/archetype-resources/site-war/src/main/webapp/WEB-INF/applicationContext.xml